plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.5.0-M1'
}

group 'org.example'
version '1.0-SNAPSHOT'

targetCompatibility = '15'
sourceCompatibility = '15'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'com.carrotsearch:jsuffixarrays:0.1.0'
    // https://mvnrepository.com/artifact/org.javatuples/javatuples
    compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
    //it.options.compilerArgs.add('-Xlint:preview')
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
    jvmArgs += '-Xmx8G'
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

